# intelligent-cars

./: .gitignore  CLAUDE.md  Chambers_Intelligent_Cars_v2.md  ISSUES.md  PRD.md  README.md
.github/workflows/: ci.yml
chambers-gateway/: Cargo.toml
chambers-gateway/src/: lib.rs  main.rs
chambers-gateway/src/audit/: mod.rs
chambers-gateway/src/burn/: mod.rs
chambers-gateway/src/core/: mod.rs
chambers-gateway/src/gateway/: mod.rs
chambers-gateway/src/hsm/: mod.rs
chambers-gateway/src/manifest/: mod.rs
chambers-gateway/tests/: integration_tests.rs
chambers-sim/: pyproject.toml
chambers-sim/chambers_sim/: __init__.py  cli.py
chambers-sim/chambers_sim/adapters/: __init__.py  base.py  carla_adapter.py  ros2_adapter.py  sumo_adapter.py
chambers-sim/chambers_sim/models/: __init__.py  data_record.py  manifest.py
chambers-sim/chambers_sim/utils/: __init__.py  data_residue.py  gateway_client.py  local_gateway.py
chambers-sim/tests/: test_local_gateway.py  test_models.py  test_sumo_adapter.py
docker/: Dockerfile.gateway  Dockerfile.sim  Dockerfile.stakeholders  docker-compose.phase1.yml  docker-compose.phase2.yml
docs/architecture/: data_flow.md  overview.md  threat_model.md
docs/setup/: phase1.md  phase2.md  phase3.md  quickstart.md
manifests/: demo_manifest.json  insurer_only_manifest.json  minimal_manifest.json  no_stakeholders_manifest.json  schema.json
mock-stakeholders/: Dockerfile  pyproject.toml
mock-stakeholders/app/: __init__.py  main.py  models.py  storage.py
mock-stakeholders/tests/: test_endpoints.py
scenarios/carla/: README.md  sealed_event_demo.py  urban_drive.py  v2x_cosim.py
scenarios/gazebo/: README.md  ecu_sim_launch.py  ecu_sim_params.yaml  vehicle_model.sdf
scenarios/sumo/: README.md  generate_network.py  generate_routes.py  urban_100v.sumocfg
tests/e2e/: conftest.py  test_phase1_scenario.py
tests/integration/: conftest.py  test_compliance_artefacts.py  test_consent_revocation.py  test_data_residue.py  test_hsm_fallback.py  test_manifest_enforcement.py  test_session_lifecycle.py  test_threat_simulation.py
