[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chambers-mock-stakeholders"
version = "0.1.0"
description = "Mock stakeholder endpoints for the Chambers Automotive Simulation Testbed"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
